# SDDv2

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  pyproject.toml
backend/apps/discounts/: admin.py  apps.py  models.py  views.py
backend/apps/discounts/migrations/: 0001_initial.py
backend/apps/shopware/: admin.py  apps.py  client.py  models.py
backend/apps/shopware/migrations/: 0001_initial.py
backend/core/: db.sqlite3
backend/core/settings/: __init__.py  base.py  production.py
backend/static/admin/js/: discount_conditions.js
