[tool.poetry]
name = "SDDv2"
version = "0.1.0"
description = "A Django application for managing Shopware 6 discounts"
authors = ["Johan Koppenaal <jodykoppenaal@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
requests = "^2.31.0"
pycryptodome = "^3.19.0"
cryptography = "^43.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
